--- a/NiziKit.Editor/EditorMainView.axaml
+++ b/NiziKit.Editor/EditorMainView.axaml
@@ -112,7 +112,7 @@
         <Grid IsVisible="{Binding IsContentBrowserOpen}"
               ColumnDefinitions="Auto,*,Auto"
               RowDefinitions="*,Auto,Auto">
-            <Border Grid.Column="0" Grid.Row="1" Width="392" Background="Transparent"/>
+            <Border Grid.Column="0" Grid.Row="1" Width="392" Classes="spacer"/>
             <Border Grid.Column="1" Grid.Row="1"
                     Background="{StaticResource EditorPanelBackground}"
                     BorderBrush="{StaticResource EditorPanelBorder}"
@@ -185,19 +185,19 @@
                 </Grid>
             </Border>
 
-            <Border Grid.Column="2" Grid.Row="1" Width="432" Background="Transparent"/>
+            <Border Grid.Column="2" Grid.Row="1" Width="432" Classes="spacer"/>
 
-            <Border Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Height="60" Background="Transparent"/>
+            <Border Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Height="60" Classes="spacer"/>
         </Grid>
 
         <Border IsVisible="{Binding ContentBrowserViewModel.IsAssetEditorOpen}"
-                Background="#60000000"
+                Classes="dialog-overlay"
                 ZIndex="500">
             <editors:AssetEditorDialog DataContext="{Binding ContentBrowserViewModel}"/>
         </Border>
 
         <Border IsVisible="{Binding IsImportPanelOpen}"
-                Background="#60000000"
+                Classes="dialog-overlay"
                 ZIndex="1000">
             <Border Classes="dialog-container-large"
                     HorizontalAlignment="Center"
@@ -230,14 +230,14 @@
         </Border>
 
         <Border IsVisible="{Binding IsAssetPickerOpen}"
-                Background="#60000000">
+                Classes="dialog-overlay">
             <editors:AssetPickerDialog x:Name="AssetPickerDialog"
                                        HorizontalAlignment="Center"
                                        VerticalAlignment="Center"/>
         </Border>
 
         <Border IsVisible="{Binding IsOpenSceneDialogOpen}"
-                Background="#60000000"
+                Classes="dialog-overlay"
                 ZIndex="1100">
             <Border Classes="dialog-container-large"
                     HorizontalAlignment="Center"
@@ -272,7 +272,7 @@
         </Border>
 
         <Border IsVisible="{Binding IsSavePromptOpen}"
-                Background="#60000000"
+                Classes="dialog-overlay"
                 ZIndex="1200">
             <Border Background="{StaticResource EditorPanelBackground}"
                     BorderBrush="{StaticResource EditorPanelBorder}"
