--- a/NiziKit.Editor/Styles/EditorStyles.axaml
+++ b/NiziKit.Editor/Styles/EditorStyles.axaml
@@ -9,11 +9,11 @@
         <x:Double x:Key="FontSizeTitle">30</x:Double>
         <x:Double x:Key="FontSizeHeader">36</x:Double>
 
-        <x:Double x:Key="IconSizeSmall">12</x:Double>
-        <x:Double x:Key="IconSizeBase">16</x:Double>
-        <x:Double x:Key="IconSizeMedium">18</x:Double>
-        <x:Double x:Key="IconSizeLarge">20</x:Double>
-        <x:Double x:Key="IconSizeXL">32</x:Double>
+        <x:Double x:Key="IconSizeSmall">20</x:Double>
+        <x:Double x:Key="IconSizeBase">22</x:Double>
+        <x:Double x:Key="IconSizeMedium">24</x:Double>
+        <x:Double x:Key="IconSizeLarge">26</x:Double>
+        <x:Double x:Key="IconSizeXL">36</x:Double>
         <x:Double x:Key="IconSizeXXL">48</x:Double>
         <x:Double x:Key="IconSizeHuge">56</x:Double>
 
@@ -36,7 +36,19 @@
         <x:Double x:Key="SpacingMD">12</x:Double>
         <x:Double x:Key="SpacingLG">16</x:Double>
         <x:Double x:Key="SpacingXL">24</x:Double>
+
+        <SolidColorBrush x:Key="TransparentSpacerBrush" Color="Transparent"/>
+        <SolidColorBrush x:Key="DialogOverlayBrush" Color="#60000000"/>
     </Styles.Resources>
+
+    <Style Selector="Border.dialog-overlay">
+        <Setter Property="Background" Value="{StaticResource DialogOverlayBrush}"/>
+    </Style>
+
+    <Style Selector="Border.spacer">
+        <Setter Property="Background" Value="{StaticResource TransparentSpacerBrush}"/>
+        <Setter Property="IsHitTestVisible" Value="False"/>
+    </Style>
 
     <Style Selector="TextBlock.caption">
         <Setter Property="FontSize" Value="{StaticResource FontSizeCaption}"/>
