Improve asset pack management

--- a/NiziKit.Editor/EditorMainView.axaml
+++ b/NiziKit.Editor/EditorMainView.axaml
@@ -230,7 +230,8 @@
         </Border>
 
         <Border IsVisible="{Binding IsAssetPickerOpen}"
-                Classes="dialog-overlay">
+                Classes="dialog-overlay"
+                ZIndex="600">
             <editors:AssetPickerDialog x:Name="AssetPickerDialog"
                                        HorizontalAlignment="Center"
                                        VerticalAlignment="Center"/>
